# IIITG-auto-firewall-auth

./: Cargo.toml  README.md  manager.sh
src/: main.rs
