name = "iiitg-auth"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "process"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
rand = "0.8"
dialoguer = "0.11"
notify-rust = "4"
directories = "6.0"
log = "0.4"
env_logger = "0.11"